# spbu-formal-languages-and-translators

./: .gitignore  CHANGELOG.md  parsecTry.cabal  spbu-formal-languages-and-translators.cabal  stack.yaml
app/: Main.hs
app/concordance/: Main.hs
app/ll/: Main.hs
app/rectangles/: Main.hs
app/sets/: Main.hs
docs/: preamble.tex
docs/coding/: coding.tex
docs/concordance/: concordance.tex
docs/homework1/: homework1.tex
docs/homework2/: homework2.tex
docs/homework3/: homework3.tex
docs/homework4/: homework4.tex
docs/rectangles_sets/: rectangles_sets.tex
examples/coding/: expression1.txt
examples/concordance/: ae_fond_kiss.txt  test.txt
src/: Coding.hs  CodingParser.hs  Ll.hs
