cabal-version:      2.4
name:               parsecTry
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Nikolai Ponomarev
maintainer:         wowasterdev@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-depends
  build-depends:
    , base                  >=4.16.0.0 && <5.0
    , containers            >=0.6.7    && <1.0
    , megaparsec            >=9.5.0    && <9.6
    , mtl                   >=2.3.1    && <2.4
    , pretty-simple         >=4.1.2.0
    , text                  >=2.0.2    && <2.1
    , unordered-containers  >=0.2.19   && <0.3

library common-lib
  import:           common-depends
  exposed-modules:
    Coding
    CodingParser

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  other-extensions:
    OverloadedStrings
    RecordWildCards

  -- build-depends:


  hs-source-dirs:   src
  default-language: Haskell2010

executable coding
  import:           common-depends
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , common-lib
    , optparse-applicative  >=0.18.1 && <0.19

  hs-source-dirs:   app/coding
  default-language: Haskell2010

executable sets
  import:           common-depends
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , common-lib
    , optparse-applicative  >=0.18.1 && <0.19

  hs-source-dirs:   app/sets
  default-language: Haskell2010
